fixtures/vyper/simple/overflow/negative/i8.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-128"
#!           ],
#!           "caller": "0x2A52a28DdDB79E0fD6bFe7f6253200AB5C37CA58"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int8) -> int8:
    return witness - 1
